tests/NormalTests/paczka1/small_fuzzy/60518670.err
Error in line 2: suyJD A142 28,4
Error in line 6: suyJD A269 432,3
Error in line 9: suyJD S60 21,3
Error in line 14: lIU3abV A269 16,2
